#5282 Add pipeline scheduling